<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context="com.mlijo.aryaym.konsumen_mlijo.PesanProduk.PesanProdukActivity"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_radius"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imgProduk"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:padding="5dp"
                android:layout_weight="0.3"
                android:src="@drawable/logo"/>

            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.7"
                 android:orientation="vertical">

                 <TextView
                     android:id="@+id/txtNamaProduk"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
                     android:paddingTop="15dp"
                     android:text="@string/lbl_nama_produk"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
                     android:textSize="20sp"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:paddingTop="2dp"
                     android:orientation="horizontal"
                     android:weightSum="1">
                     <TextView
                         android:id="@+id/txt_harga_produk"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.4"
                         android:text="Rp. 5.000"/>
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.6"
                         android:text="@string/lbl_porsi"/>
                 </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginLeft="15dp"
                    android:background="@android:color/darker_gray" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="2dp"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:id="@+id/txt_satuan_digit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:text="250"/>
                    <TextView
                        android:id="@+id/txt_satuan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:text="Gram"/>
                </LinearLayout>
             </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_radius"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_jumlah_produk"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7">

                    <com.gildaswise.horizontalcounter.HorizontalCounter
                        android:id="@+id/horizontal_counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:stepValue="1"
                        app:textColor="#009688"
                        app:textSize="10dp"
                        app:minusButtonColor="#F44336"
                        app:plusButtonColor="@color/md_light_green_A700"
                        app:displayAsInteger="true"
                        app:initialValue="1"
                        app:maxValue="100"
                        app:minValue="1" />
                </LinearLayout>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:text="@string/hint_porsi"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_waktu_pengiriman"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/input_tanggal_kirim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="tanggal"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:id="@+id/input_jam_kirim"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="jam"
                    android:textSize="20sp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_marginTop="5dp"
                android:background="@android:color/darker_gray" />
            <EditText
                android:id="@+id/notePenjual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:scrollHorizontally="true"
                android:hint="@string/hint_note_penjual"/>
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_alamat_kirim"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="@color/grey_dark">
            <TextView
                android:id="@+id/nama_penerima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Penerima"/>
            <TextView
                android:id="@+id/alamat_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Alamat lengkap"/>
            <TextView
                android:id="@+id/nomortelp_penerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nomor HP Penerima"/>

        </LinearLayout>

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_total_harga"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1"
            android:text="Rp."/>
        <TextView
            android:id="@+id/harga_produk_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="0" />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/pesanProduk"
        android:layout_width="match_parent"
        android:background="@drawable/layout_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Pesan"
        android:textColor="@color/white"
        android:layout_below="@+id/scrollView"/>
</LinearLayout>
