<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light"
    tools:context="com.mlijo.aryaym.konsumen_mlijo.Penjual.PesanProdukKhususActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_radius"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:weightSum="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduk"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:padding="5dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/logo"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/input_nama_produk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingTop="15dp"
                        android:hint="@string/lbl_nama_produk"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <Spinner
                        android:id="@+id/spn_kategori_produk"
                        android:hint="kategori"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_radius"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_detail_info"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_weight="0.4"
                        android:text="Satuan produk :"/>
                    <EditText
                        android:id="@+id/input_satuan_digit"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:inputType="number"
                        android:hint="250"/>
                    <Spinner
                        android:id="@+id/spn_nama_satuan"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.4"
                        android:gravity="center"></Spinner>
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_waktu_pengiriman"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/input_tanggal_kirim"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="tanggal"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="-"
                        android:gravity="center_horizontal"/>
                    <TextView
                        android:id="@+id/input_jam_kirim"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:hint="jam"
                        android:textSize="20sp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.4dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />
                <EditText
                    android:id="@+id/notePenjual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:scrollHorizontally="true"
                    android:hint="@string/hint_note_penjual"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_radius"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_alamat_kirim"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:background="@color/grey_dark">
                    <TextView
                        android:id="@+id/nama_penerima"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nama Penerima"/>
                    <TextView
                        android:id="@+id/alamat_lengkap"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Alamat lengkap"/>
                    <TextView
                        android:id="@+id/nomortelp_penerima"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nomor HP Penerima"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Pilih Alamat"/>

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Tambah Alamat"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/pesanProduk"
                android:layout_width="match_parent"
                android:background="@drawable/layout_radius"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="Pesan"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
